# IN-meetings

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  DESIGN.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  Makefile  NOTICE  Package.resolved  Package.swift  README.md  RESEARCH.md  THIRD_PARTY_NOTICES.md  appcast.xml  index.html
.agents/: agents.json
adr/: ADR-001-call-detection-trigger-ux.md  ADR-002-capture-pipeline.md  ADR-003-transcription-engine.md  ADR-004-context-assembler.md  ADR-005-context-package-contract.md  ADR-006-storage-drive-sync.md  ADR-007-dashboard.md  ADR-008-claude-auto-trigger.md  ADR-009-app-architecture-ipc.md  ADR-010-privacy-consent.md  ADR-011-recording-modes.md  README.md
docs/: appcast.xml  distribution-setup.md  manual-tests-auto-stop.md  manual-tests-modular-layout.md  manual-tests-onboarding.md  manual-tests-reliability-video-picker.md  manual-tests-saventa-summary.md
pipeline/: pyproject.toml
pipeline/benchmarks/: .gitignore  P1-FINDINGS.md  README.md  compare_terms.py  diarize_bakeoff.py  postcorrect.py  run_benchmark.sh
pipeline/in_meetings_pipeline/: __init__.py  __main__.py  asr.py  context_assembler.py  diarize.py  job.py  metadata.py  postcorrect.py  status.py  transcript.py
pipeline/in_meetings_pipeline/data/: core_lexicon.json
pipeline/tests/: test_asr.py  test_context.py  test_contract.py  test_diarize.py  test_import.py  test_metadata.py  test_postcorrect.py  test_silence.py  test_transcript.py  test_user_vocab.py
prototypes/: .gitignore  README.md
schema/: README.md  metadata.schema.json  (+1 more)
(+215 files in other folders)
